chore: updated the yaml files

--- a/node-app/deployment.yaml
+++ b/node-app/deployment.yaml
@@ -16,4 +16,4 @@ spec:
     spec:
       containers:
         - name: node-app-container
-          image: niranjan2602/kube-first-app
+          image: niranjan2602/kube-first-app:2
