--- a/node-app/master-deployment.yaml
+++ b/node-app/master-deployment.yaml
@@ -1,9 +1,22 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: backend-lb
+spec:
+  selector:
+    pod: node-app
+    tier: backend
+  type: LoadBalancer
+  ports:
+  - name:  default
+    port:  80
+    protocol: 'TCP'
+    targetPort: 80
+---
 apiVersion: apps/v1
 kind: Deployment # This is the kind of the object
 metadata: 
   name: node-app-dep
-  labels:
-    group: example
 spec:
   replicas: 1
   selector:
