--- a/node-app/master-deployment.yaml
+++ b/node-app/master-deployment.yaml
@@ -32,3 +32,10 @@ spec:
       containers:
         - name: node-app-container
           image: niranjan2602/kube-first-app:2
+          imagePullPolicy: Always
+          livenessProbe:
+            httpGet:
+              port: 80
+              path: /
+            periodSeconds: 10
+            initialDelaySeconds: 5
